<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeFragment" android:title="@string/home" android:icon="@drawable/img_home" app:showAsAction="ifRoom" />
    <item android:id="@+id/friendRequestFragment" android:title="@string/friend" android:icon="@drawable/img_friend" app:showAsAction="ifRoom" />
    <item android:id="@+id/personalProfileFragment" android:title="@string/personal" android:icon="@drawable/img_personal" app:showAsAction="ifRoom" />
    <item android:id="@+id/watchVideoFragment" android:title="@string/watch" android:icon="@drawable/img_watch" app:showAsAction="ifRoom" />
    <item android:id="@+id/notificationsFragment" android:title="@string/notify" android:icon="@drawable/img_notify" app:showAsAction="ifRoom" />
    <item android:id="@+id/menuFragment" android:title="@string/menu" android:icon="@drawable/img_menu" app:showAsAction="ifRoom" />

</menu>